welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:2: error: not found: value noDouble
  if (noDouble==false){
      ^withoutDoubles:5: error: not found: value noDoublean
  else if ( noDoublean==true && die1==die2){
            ^